--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     implementation 'org.antlr:antlr4-runtime:4.9.3'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
